colang-cli/tests/samples/features/return/compile_error/wrong_value_type.co
fun foo(x: int): string {
  if (x == 4) {
    return '4';
  }

  "not four"
}

fun main() { }
